--- a/pages/About Us/index.html
+++ b/pages/About Us/index.html
@@ -28,9 +28,9 @@
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="/index.html" class="syncopate-regular">HOME</a></li>
-                    <li><a href="/pages/About Us/index.html" class="syncopate-active">ABOUT</a></li>
-                    <li><a href="/pages/Spots/index.html" class="syncopate-regular">SPOTS</a></li>
+                    <li><a href="../../index.html" class="syncopate-regular">HOME</a></li>
+                    <li><a href="./index.html" class="syncopate-active">ABOUT</a></li>
+                    <li><a href="../Spots/index.html" class="syncopate-regular">SPOTS</a></li>
                 </ul>
             </nav>
         </div>
@@ -59,7 +59,7 @@
 
         <section class="hero">
             <h1 class ="syncopate-bold">FUECOCO</h1>
-            <img src="../../assets/img/Fuecoco Logo (2).png" class ="fuecoco_logo">
+            <img src="../../assets/img/Fuecoco Logo.png" class ="fuecoco_logo">
             <p>Welcome to XPLORA! We are FUECOCO, a passionate team of five innovators dedicated to making city 
                 exploration easier, smarter, and more personalized. 
                 Our mission is to create an interactive and user-friendly urban 
