--- a/pages/Spots/index.html
+++ b/pages/Spots/index.html
@@ -18,7 +18,7 @@
 
 
     <!-- CDNJS -->
-    <link rel="stylesheet" href="../../pages/Spots/assets/css/style.css">
+    <link rel="stylesheet" href="./../Spots/assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/b93004a0bd.js" crossorigin="anonymous"></script>
 </head>
@@ -28,9 +28,9 @@
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="/index.html" class="syncopate-regular">HOME</a></li>
-                    <li><a href="/pages/About Us/index.html" class="syncopate-regular">ABOUT</a></li>
-                    <li><a href="/pages/Spots/index.html" class="syncopate-active">SPOTS</a></li>
+                    <li><a href="../../index.html" class="syncopate-regular">HOME</a></li>
+                    <li><a href="../About Us/index.html" class="syncopate-regular">ABOUT</a></li>
+                    <li><a href="./index.html" class="syncopate-active">SPOTS</a></li>
                 </ul>
             </nav>
         </div>
